# sospd

./: .gitignore  CMakeLists.txt
include/: multilabel-energy.hpp  sos-graph.hpp  sospd.hpp
src/: sospd.cpp  submodular-ibfs.cpp
test/: CMakeLists.txt
